[gd_scene load_steps=12 format=3 uid="uid://ohj5fnks44od"]

[ext_resource type="Script" uid="uid://q6vyvdf5mt4t" path="res://src/scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://clv2ohtbwiwfx" path="res://assets/sprites/loop_cat.png" id="3_hwyk6"]
[ext_resource type="AudioStream" uid="uid://dio57s2dcho28" path="res://assets/audio/cartoon_jump.mp3" id="3_l2v1k"]
[ext_resource type="AudioStream" uid="uid://bnyudcpnjwf5b" path="res://assets/audio/loop_warp_sound.wav" id="4_ya6j6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4rts"]
atlas = ExtResource("3_hwyk6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwyk6"]
atlas = ExtResource("3_hwyk6")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2els"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4rts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwyk6")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0qy4j"]
atlas = ExtResource("3_hwyk6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v6aa"]
atlas = ExtResource("3_hwyk6")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l2v1k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v6aa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(13, 15)

[node name="Player" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_g2els")
speed = 200.0
acceleration = 30.0
jump_velocity = -300.0
reset_time_sec = 3.0

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
sprite_frames = SubResource("SpriteFrames_g2els")
autoplay = "default"
frame = 1
frame_progress = 0.335715

[node name="Shadow" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.423529)
sprite_frames = SubResource("SpriteFrames_l2v1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_3vyb7")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_l2v1k")
volume_db = -10.47
bus = &"SFX"

[node name="LoopSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ya6j6")
volume_db = -4.188
bus = &"SFX"
